# testomat_tests

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
src/api/: __init__.py  client.py
src/api/models/: project.py
src/web/: Application.py  __init__.py  application.py
src/web/components/: GridComponent.py  HeaderComponent.py  ProjectCard.py  ProjectsPageHeader.py  SideBar.py  __init__.py  project_card.py  projects_page_header.py  side_bar.py  test_for_suite_popup.py  test_modal.py
src/web/pages/: HomePage.py  LoginPage.py  NewProjectsPage.py  ProjectPage.py  ProjectsPage.py  __init__.py  login_page.py  project_page.py  projects_page.py
tests/: conftest.py  first_test.py
tests/api/: projects_test.py
tests/fixtures/: api.py  app.py  config.py  cookie_helper.py  playwright.py  selenium.py
tests/web/: cookies_test.py  login_page_test.py  login_test_page.py  new_page_tests.py  project_creation_tests.py  projects_page_test.py
tests/web/enterpise_plan_tests/: project_creation_tests.py  projects_page_test.py  switch_company_test.py
tests/web/free_plan_tests/: free_plan_test.py
tests/web/selenium/: test_via_selenium.py
tests/web/selenium/core/: base_page.py  waits.py
tests/web/selenium/pages/: login_page.py  login_page_v2.py
