[project]
name = "testomat-tests"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pytest==8.4.2",
    "python-dotenv==1.2.1",
    "playwright==1.55.0",
    "faker==40.11.0",
    "pytest-html==4.2.0",
    "pytest-playwright==0.7.2",
    "pydantic>=2.0.0",
    "requests==2.32.3",
    "httpx>=0.28.0",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
python_functions = ["test_*"]
norecursedirs = [".git", ".venv", ".claude", "__pycache__", "build", "dist", "*.egg-info"]
addopts = [
    "-v",
    "-rA",
    "--strict-markers",
    "--tb=short",
    "--headed",
    "--output=test-result/traces/",
    "--html=test-result/report.html",
    "--self-contained-html",
]
markers = [
    "smoke: Quick smoke tests for basic functionality",
    "regression: Full regression test suite",
    "web: Web UI tests using Playwright",
    "slow: Tests that take longer to execute",
    "api: API tests using requests",
]
console_output_style = "progress"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
xfail_strict = true
